fix z-index problem in intro section that was making the button unclickable

--- a/components/home/intro.module.css
+++ b/components/home/intro.module.css
@@ -2,7 +2,6 @@
   padding: 5rem 0 10rem 0;
   background-color: rgb(0, 0, 0);
   position: relative;
-  z-index: -20;
 }
 
 .introWrapper {
@@ -14,6 +13,7 @@
   position: relative;
   width: fit-content;
   margin: 0 auto;
+  z-index: 2;
 }
 
 .lightBlue {
@@ -81,7 +81,7 @@
 .btn {
   font-size: 1.8rem;
   margin-top: 1rem;
-
+  z-index: 999;
 }
 
 .logo {
@@ -92,7 +92,7 @@
 }
 
 .p, .logo {
-   background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.602) 30%, #00000000 70%);
+   background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.602) 40%, #00000000 75%);
    background-position-x: 70%; 
    border-radius: 50%;
    
